--- a/OpenHashTab/OpenHashTab.vcxproj.filters
+++ b/OpenHashTab/OpenHashTab.vcxproj.filters
@@ -17,21 +17,6 @@
       <UniqueIdentifier>{fa7990bc-29fb-49c8-b7d6-6e370e7dd3b1}</UniqueIdentifier>
       <SourceControlFiles>False</SourceControlFiles>
     </Filter>
-    <Filter Include="mbedtls">
-      <UniqueIdentifier>{8e8284f8-e291-4acb-be53-3951f7d83236}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="BLAKE2sp">
-      <UniqueIdentifier>{67429f80-2fce-4780-b600-246c09a5a706}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="SHA3">
-      <UniqueIdentifier>{3af9cddb-3a71-4132-80dd-906c4a07bf99}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="CRC32">
-      <UniqueIdentifier>{f023d767-ba4d-4281-9822-8aff43aeaf05}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="BLAKE3">
-      <UniqueIdentifier>{26c5a99a-5567-4892-9570-ea3267dd882d}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -52,35 +37,8 @@
     <ClCompile Include="SumFileParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\mbedtls\library\md2.c">
-      <Filter>mbedtls</Filter>
-    </ClCompile>
-    <ClCompile Include="..\mbedtls\library\md4.c">
-      <Filter>mbedtls</Filter>
-    </ClCompile>
-    <ClCompile Include="..\mbedtls\library\md5.c">
-      <Filter>mbedtls</Filter>
-    </ClCompile>
-    <ClCompile Include="..\mbedtls\library\platform_util.c">
-      <Filter>mbedtls</Filter>
-    </ClCompile>
-    <ClCompile Include="..\mbedtls\library\ripemd160.c">
-      <Filter>mbedtls</Filter>
-    </ClCompile>
-    <ClCompile Include="..\mbedtls\library\sha1.c">
-      <Filter>mbedtls</Filter>
-    </ClCompile>
-    <ClCompile Include="..\mbedtls\library\sha256.c">
-      <Filter>mbedtls</Filter>
-    </ClCompile>
-    <ClCompile Include="..\mbedtls\library\sha512.c">
-      <Filter>mbedtls</Filter>
-    </ClCompile>
     <ClCompile Include="utl.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="blake2sp.c">
-      <Filter>BLAKE2sp</Filter>
     </ClCompile>
     <ClCompile Include="Queues.cpp">
       <Filter>Source Files</Filter>
@@ -88,19 +46,7 @@
     <ClCompile Include="FileHashTask.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="sha3.c">
-      <Filter>SHA3</Filter>
-    </ClCompile>
-    <ClCompile Include="crc32.c">
-      <Filter>CRC32</Filter>
-    </ClCompile>
-    <ClCompile Include="Hasher.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="SettingsDialog.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="HasherRegistry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MainDialog.cpp">
@@ -112,22 +58,7 @@
     <ClCompile Include="Standalone.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="blake3.c">
-      <Filter>BLAKE3</Filter>
-    </ClCompile>
-    <ClCompile Include="blake3_avx2.c">
-      <Filter>BLAKE3</Filter>
-    </ClCompile>
-    <ClCompile Include="blake3_avx512.c">
-      <Filter>BLAKE3</Filter>
-    </ClCompile>
-    <ClCompile Include="blake3_dispatch.c">
-      <Filter>BLAKE3</Filter>
-    </ClCompile>
-    <ClCompile Include="blake3_portable.c">
-      <Filter>BLAKE3</Filter>
-    </ClCompile>
-    <ClCompile Include="Benchmark.cpp">
+    <ClCompile Include="Settings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -159,20 +90,8 @@
     <ClInclude Include="FileHashTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Hasher.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="blake2sp.h">
-      <Filter>BLAKE2sp</Filter>
-    </ClInclude>
     <ClInclude Include="Queues.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="sha3.h">
-      <Filter>SHA3</Filter>
-    </ClInclude>
-    <ClInclude Include="crc32.h">
-      <Filter>CRC32</Filter>
     </ClInclude>
     <ClInclude Include="SettingsDialog.h">
       <Filter>Header Files</Filter>
@@ -186,11 +105,8 @@
     <ClInclude Include="Coordinator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="blake3_impl.h">
-      <Filter>BLAKE3</Filter>
-    </ClInclude>
-    <ClInclude Include="blake3.h">
-      <Filter>BLAKE3</Filter>
+    <ClInclude Include="Settings.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -216,16 +132,5 @@
     <Midl Include="OpenHashTab.idl">
       <Filter>Source Files</Filter>
     </Midl>
-  </ItemGroup>
-  <ItemGroup>
-    <MASM Include="blake3_avx512_x86-64_windows_msvc.asm">
-      <Filter>BLAKE3</Filter>
-    </MASM>
-    <MASM Include="blake3_avx2_x86-64_windows_msvc.asm">
-      <Filter>BLAKE3</Filter>
-    </MASM>
-    <MASM Include="blake3_sse41_x86-64_windows_msvc.asm">
-      <Filter>BLAKE3</Filter>
-    </MASM>
   </ItemGroup>
 </Project>
