--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,18 +63,25 @@ jobs:
         cd ${{ github.workspace }}
         iscc .\installer.iss -DCI_VERSION="${{ steps.checktag.outputs.version }}" -DCI_VERSION_NUMERIC="${{ steps.checktag.outputs.version_major }}.${{ steps.checktag.outputs.version_minor }}.${{ steps.checktag.outputs.version_patch }}"
         
+    - name: Pack artifacts
+      if: ${{ steps.checktag.outputs.is_release == 'yes' }}
+      run: |
+        cd ${{ github.workspace }}
+        7z a artifacts.7z .\bin\Release\
+        
+    - name: Upload setup
+      uses: actions/upload-artifact@v2
+      with:
+        name: setup
+        path: |
+          .\OpenHashTab_setup.exe
+          
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: binaries
+        name: artifacts
         path: |
-          .\bin\Release\Win32\OpenHashTab.dll
-          .\bin\Release\Win32\OpenHashTab.pdb
-          .\bin\Release\x64\OpenHashTab.dll
-          .\bin\Release\x64\OpenHashTab.pdb
-          .\bin\Release\ARM64\OpenHashTab.dll
-          .\bin\Release\ARM64\OpenHashTab.pdb
-          .\OpenHashTab_setup.exe
+          .\artifacts.7z
 
     - name: Create release
       if: ${{ steps.checktag.outputs.is_release == 'yes' }}
@@ -104,7 +111,7 @@ jobs:
       if: ${{ steps.checktag.outputs.is_release == 'yes' }}
       run: |
         cd ${{ github.workspace }}
-        7z a Symbols.7z .\bin\Release\*\OpenHashTab.pdb
+        7z a symbols.7z .\bin\Release\*\OpenHashTab.pdb
         
     - name: Upload release symbols
       if: ${{ steps.checktag.outputs.is_release == 'yes' }}
@@ -114,7 +121,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: .\Symbols.7z
-        asset_name: Symbols.7z
+        asset_path: .\symbols.7z
+        asset_name: symbols.7z
         asset_content_type: application/octet-stream
 
