--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,6 @@ jobs:
         iscc .\installer.iss -DCI_VERSION="${{ steps.checktag.outputs.version }}" -DCI_VERSION_NUMERIC="${{ steps.checktag.outputs.version_major }}.${{ steps.checktag.outputs.version_minor }}.${{ steps.checktag.outputs.version_patch }}"
         
     - name: Pack artifacts
-      if: ${{ steps.checktag.outputs.is_release == 'yes' }}
       run: |
         cd ${{ github.workspace }}
         7z a artifacts.7z .\bin\Release\
@@ -95,7 +94,7 @@ jobs:
         draft: false
         prerelease: true
 
-    - name: Upload release binary
+    - name: Upload release setup
       if: ${{ steps.checktag.outputs.is_release == 'yes' }}
       id: upload-release-binary
       uses: actions/upload-release-asset@v1
@@ -107,7 +106,7 @@ jobs:
         asset_name: OpenHashTab_setup.exe
         asset_content_type: application/octet-stream
         
-    - name: Pack symbols
+    - name: Pack release symbols
       if: ${{ steps.checktag.outputs.is_release == 'yes' }}
       run: |
         cd ${{ github.workspace }}
