--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -43,7 +43,8 @@ BEGIN
     RTEXT           "IDS_PROCESSING",IDC_STATIC_PROCESSING,108,152,91,10
     PUSHBUTTON      "IDS_CLIPBOARD",IDC_BUTTON_CLIPBOARD,102,216,54,15,WS_DISABLED
     PUSHBUTTON      "*",IDC_BUTTON_SETTINGS,203,149,16,14,WS_DISABLED
-    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,6,233,210,14
+    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,6,233,150,14
+    PUSHBUTTON      "IDS_CANCEL",IDC_BUTTON_CANCEL,162,234,54,12,0
 END
 
 IDD_SETTINGS DIALOGEX 0, 0, 127, 178
@@ -96,7 +97,8 @@ BEGIN
     100, 100, 0, 0,
     100, 100, 0, 0,
     100, 100, 0, 0,
-    0, 100, 100, 0
+    0, 100, 100, 0,
+    100, 100, 0, 0
 END
 
 IDD_SETTINGS AFX_DIALOG_LAYOUT
