--- a/OpenHashTab/OpenHashTab.vcxproj.filters
+++ b/OpenHashTab/OpenHashTab.vcxproj.filters
@@ -116,6 +116,9 @@
     <ResourceCompile Include="localization.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+    <ResourceCompile Include="version.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenHashTab.rgs">
