--- a/OpenHashTab/OpenHashTab.vcxproj
+++ b/OpenHashTab/OpenHashTab.vcxproj
@@ -432,6 +432,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="FileHashTask.cpp" />
+    <ClCompile Include="path.cpp" />
     <ClCompile Include="Settings.cpp" />
     <ClCompile Include="OpenHashTab.cpp" />
     <ClCompile Include="OpenHashTabShlExt.cpp" />
@@ -474,6 +475,7 @@
   <ItemGroup>
     <ClInclude Include="dllmain.h" />
     <ClInclude Include="FileHashTask.h" />
+    <ClInclude Include="path.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="OpenHashTabShlExt.h" />
     <ClInclude Include="OpenHashTab_i.h" />
