--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -30,6 +30,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_DEFAULT
 
 IDD_OPENHASHTAB_PROPPAGE DIALOGEX 0, 0, 225, 250
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_DISABLED | WS_CAPTION
+CAPTION "OpenHashTab"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     LTEXT           "IDS_CHECK_AGAINST",IDC_STATIC_CHECK_AGAINST,7,164,211,8
