add new setting checkboxes

--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -48,12 +48,27 @@ BEGIN
     PUSHBUTTON      "IDS_CANCEL",IDC_BUTTON_CANCEL,162,234,54,12
 END
 
-IDD_SETTINGS DIALOGEX 0, 0, 127, 178
+IDD_SETTINGS DIALOGEX 0, 0, 345, 178
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "*"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_ALGORITHM_LIST,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,7,113,164
+    CONTROL         "",IDC_ALGORITHM_LIST,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,6,6,113,164
+    CONTROL         "IDS_DISPLAY_UPPERCASE",IDC_CHECK_DISPLAY_UPPERCASE,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,6,101,10
+    CONTROL         "IDS_LOOK_FOR_SUMFILES",IDC_CHECK_LOOK_FOR_SUMFILES,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,18,103,10
+    CONTROL         "IDS_SUMFILE_UPPERCASE",IDC_CHECK_SUMFILE_UPPERCASE,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,30,102,10
+    CONTROL         "IDS_SUMFILE_UNIX_ENDINGS",IDC_CHECK_SUMFILE_UNIX_ENDINGS,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,42,113,10
+    CONTROL         "IDS_SUMFILE_USE_DOUBLE_SPACE",IDC_CHECK_SUMFILE_USE_DOUBLE_SPACE,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,54,131,10
+    CONTROL         "IDS_SUMFILE_FORWARD_SLASHES",IDC_CHECK_SUMFILE_FORWARD_SLASHES,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,66,131,10
+    CONTROL         "IDS_SUMFILE_DOT_HASH_COMPATIBLE",IDC_CHECK_SUMFILE_DOT_HASH_COMPATIBLE,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,78,145,10
+    CONTROL         "IDS_SUMFILE_BANNER",IDC_CHECK_SUMFILE_BANNER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,90,90,10
 END
 
 
@@ -74,6 +89,11 @@ BEGIN
         HORZGUIDE, 33
         HORZGUIDE, 76
         HORZGUIDE, 120
+    END
+
+    IDD_SETTINGS, DIALOG
+    BEGIN
+        RIGHTMARGIN, 67
     END
 END
 #endif    // APSTUDIO_INVOKED
