--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -55,20 +55,22 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_ALGORITHM_LIST,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,6,6,113,164
     CONTROL         "IDS_DISPLAY_UPPERCASE",IDC_CHECK_DISPLAY_UPPERCASE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,6,101,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,6,210,10
     CONTROL         "IDS_LOOK_FOR_SUMFILES",IDC_CHECK_LOOK_FOR_SUMFILES,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,18,103,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,18,210,10
     CONTROL         "IDS_SUMFILE_UPPERCASE",IDC_CHECK_SUMFILE_UPPERCASE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,30,102,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,30,210,10
     CONTROL         "IDS_SUMFILE_UNIX_ENDINGS",IDC_CHECK_SUMFILE_UNIX_ENDINGS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,42,113,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,42,210,10
     CONTROL         "IDS_SUMFILE_USE_DOUBLE_SPACE",IDC_CHECK_SUMFILE_USE_DOUBLE_SPACE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,54,131,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,54,210,10
     CONTROL         "IDS_SUMFILE_FORWARD_SLASHES",IDC_CHECK_SUMFILE_FORWARD_SLASHES,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,66,131,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,66,210,10
     CONTROL         "IDS_SUMFILE_DOT_HASH_COMPATIBLE",IDC_CHECK_SUMFILE_DOT_HASH_COMPATIBLE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,78,145,10
-    CONTROL         "IDS_SUMFILE_BANNER",IDC_CHECK_SUMFILE_BANNER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,90,90,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,78,210,10
+    CONTROL         "IDS_SUMFILE_BANNER",IDC_CHECK_SUMFILE_BANNER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,90,210,10
+    CONTROL         "IDS_SUMFILE_BANNER_DATE",IDC_CHECK_SUMFILE_BANNER_DATE,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,102,210,10
 END
 
 
