add update check button

--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -72,6 +72,7 @@ BEGIN
     CONTROL         "IDS_SUMFILE_BANNER",IDC_CHECK_SUMFILE_BANNER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,90,210,10
     CONTROL         "IDS_SUMFILE_BANNER_DATE",IDC_CHECK_SUMFILE_BANNER_DATE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,102,210,10
+    PUSHBUTTON      "IDS_CHECK_FOR_UPDATES",IDC_BUTTON_CHECK_FOR_UPDATES,240,156,98,14
 END
 
 
