--- a/OpenHashTab/OpenHashTab.vcxproj.filters
+++ b/OpenHashTab/OpenHashTab.vcxproj.filters
@@ -189,4 +189,9 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="additional.manifest">
+      <Filter>Resource Files</Filter>
+    </Manifest>
+  </ItemGroup>
 </Project>
