--- a/OpenHashTab/OpenHashTab.vcxproj
+++ b/OpenHashTab/OpenHashTab.vcxproj
@@ -164,13 +164,14 @@
     <ClInclude Include="https.h" />
     <ClInclude Include="json.h" />
     <ClInclude Include="path.h" />
+    <ClInclude Include="localization\resource_localizable.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="OpenHashTabShlExt.h" />
     <ClInclude Include="OpenHashTab_i.h" />
     <ClInclude Include="MainDialog.h" />
     <ClInclude Include="Coordinator.h" />
     <ClInclude Include="Queues.h" />
-    <ClInclude Include="Resource.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="SettingsDialog.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stringencrypt.h" />
@@ -181,8 +182,8 @@
     <ClInclude Include="wnd.h" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="localization.rc" />
     <ResourceCompile Include="OpenHashTab.rc" />
+    <ResourceCompile Include="localization\en-us.rc" />
     <ResourceCompile Include="version.rc" />
   </ItemGroup>
   <ItemGroup>
