import algorithms static lib contents for now

--- a/Algorithms/AlgorithmsDll.vcxproj
+++ b/Algorithms/AlgorithmsDll.vcxproj
@@ -115,7 +115,59 @@
     <Flavor>avx512</Flavor>
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="..\mbedtls\library\md2.c" />
+    <ClCompile Include="..\mbedtls\library\md4.c" />
+    <ClCompile Include="..\mbedtls\library\md5.c" />
+    <ClCompile Include="..\mbedtls\library\platform_util.c" />
+    <ClCompile Include="..\mbedtls\library\ripemd160.c" />
+    <ClCompile Include="..\mbedtls\library\sha1.c" />
+    <ClCompile Include="..\mbedtls\library\sha256.c" />
+    <ClCompile Include="..\mbedtls\library\sha512.c" />
+    <ClCompile Include="blake2sp.c" />
+    <ClCompile Include="blake3.c" />
+    <ClCompile Include="blake3_avx2.c">
+      <ExcludedFromBuild Condition="'$(Platform)'=='ARM64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
+    </ClCompile>
+    <ClCompile Include="blake3_avx512.c">
+      <ExcludedFromBuild Condition="'$(Platform)'=='ARM64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions512</EnableEnhancedInstructionSet>
+    </ClCompile>
+    <ClCompile Include="blake3_dispatch.c" />
+    <ClCompile Include="blake3_portable.c" />
+    <ClCompile Include="crc32.c" />
+    <ClCompile Include="Hasher.cpp" />
+    <ClCompile Include="sha3.c" />
+    <ClCompile Include="xxhash.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\xxHash\xxhash.h" />
+    <ClInclude Include="blake2sp.h" />
+    <ClInclude Include="blake3.h" />
+    <ClInclude Include="blake3_impl.h" />
+    <ClInclude Include="crc32.h" />
+    <ClInclude Include="Hasher.h" />
+    <ClInclude Include="sha3.h" />
+    <ClInclude Include="mbedtls_config.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <MASM Include="blake3_avx2_x86-64_windows_msvc.asm">
+      <ExcludedFromBuild Condition="'$(Platform)'=='ARM64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Platform)'=='Win32'">true</ExcludedFromBuild>
+      <FileType>Document</FileType>
+    </MASM>
+    <MASM Include="blake3_avx512_x86-64_windows_msvc.asm">
+      <ExcludedFromBuild Condition="'$(Platform)'=='ARM64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Platform)'=='Win32'">true</ExcludedFromBuild>
+      <FileType>Document</FileType>
+    </MASM>
+    <MASM Include="blake3_sse41_x86-64_windows_msvc.asm">
+      <ExcludedFromBuild Condition="'$(Platform)'=='ARM64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Platform)'=='Win32'">true</ExcludedFromBuild>
+      <FileType>Document</FileType>
+    </MASM>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -151,15 +203,39 @@
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup>
+    <IncludePath>$(SolutionDir)mbedtls\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)bin\$(ConfigurationReal)\</OutDir>
     <TargetName>$(ProjectName)-$(Platform)-$(Flavor)</TargetName>
     <IntDir>$(SolutionDir)obj\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
+  <ItemDefinitionGroup Condition="'$(Flavor)'=='neon'">
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Flavor)|$(Platform)'=='sse2|Win32'">
+    <ClCompile>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Flavor)'=='avx'">
+    <ClCompile>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions</EnableEnhancedInstructionSet>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Flavor)'=='avx2'">
+    <ClCompile>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Flavor)'=='avx512'">
+    <ClCompile>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions512</EnableEnhancedInstructionSet>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>ALGORITHMSDLL_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>MBEDTLS_CONFIG_FILE="$(ProjectDir)mbedtls_config.h";ALGORITHMSDLL_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
